# SlackBuilds-extra

./: .gitignore  ChangeLog.rss  ChangeLog.txt  GPG-KEY  README.md  SLACKBUILDS.LIST  SLACKBUILDS.TXT
amule/: amule.SlackBuild  amule.info
ansifilter/: README  ansifilter.SlackBuild  ansifilter.info
balsa/: README  balsa.SlackBuild  balsa.info
bettercap/: PKGNOTE  README  bettercap.SlackBuild  bettercap.info
cmus/: README  cmus.info
converseen/: README  converseen.SlackBuild  converseen.info
cronie/: PKGNOTE  README  cronie.SlackBuild  cronie.info  doinst.sh  slack-desc
darktable/: darktable.SlackBuild  darktable.info
diskmonitor/: README  diskmonitor.SlackBuild  diskmonitor.info
extra-cmake-modules/: README  extra-cmake-modules.SlackBuild  extra-cmake-modules.info  slack-desc
fontforge/: fontforge.SlackBuild  fontforge.info
gimp-lensfun/: gimp-lensfun.SlackBuild  gimp-lensfun.info
git-cola/: README  git-cola.SlackBuild  git-cola.info
gmic/: README  gmic.SlackBuild  gmic.info
gmic/patches/: gmic-opencv4.patch  zart-opencv4.patch
gmic/patches/a/: CMakeLists.txt  COPYING  README
gmic/patches/a/gmic-qt/src/: ImageTools.h
gmic/patches/a/resources/: gmic_cluts.gmz
gmic/patches/a/src/: Makefile  gmic.h  gmic_stdlib.gmic  gmic_stdlib.h  use_libgmic.cpp
gmic/patches/b/resources/: gmic_bashcompletion.sh
gmic/patches/b/src/: gmic.cpp  gmic_in_script.scm
gmic/patches/b/zart/: Makefile
gmic/patches/b/zart/include/: CommandParamsWidget.h
kaccounts-integration/: README  kaccounts-integration.info
kaccounts-providers/: README  kaccounts-providers.info
kcolorpicker/: README  kcolorpicker.info
kdiff3/: README  kdiff3.SlackBuild  kdiff3.info
keepassxc/: README  keepassxc.SlackBuild  keepassxc.info
kid3/: README  kid3.SlackBuild  kid3.info
kimageannotator/: README  kimageannotator.info
kio-gdrive/: README  kio-gdrive.info
ksnip/: README  ksnip.info
ktexteditor/: README  ktexteditor.SlackBuild  ktexteditor.info
libopenshot/: README  libopenshot.SlackBuild  libopenshot.info
luminance-hdr/: README  doinst.sh  luminance-hdr.SlackBuild  luminance-hdr.info
lyx/: README  lyx.SlackBuild  lyx.info
mkvtoolnix/: README  mkvtoolnix.SlackBuild  mkvtoolnix.info
multibootusb/: README  multibootusb.SlackBuild  multibootusb.info
neomutt/: README  neomutt.SlackBuild  neomutt.info
neovim-qt/: README  neovim-qt.SlackBuild  neovim-qt.info
nomacs/: README  nomacs.SlackBuild  nomacs.info
notmuch/: README  notmuch.SlackBuild  notmuch.info
nufraw/: README  nufraw.info
obs-studio/: README  obs-studio.SlackBuild  obs-studio.info  slack-required
openshot/: README  openshot.SlackBuild  openshot.info
ostinato/: README  ostinato.SlackBuild  ostinato.info
photoqt/: README  photoqt.SlackBuild  photoqt.info
php73/: php73.SlackBuild  php73.info
php73-apcu/: README  php73-apcu.SlackBuild  php73-apcu.info  slack-desc
php73-ast/: README  php73-ast.SlackBuild  php73-ast.info  slack-desc
php73-composer/: README  php73-composer.SlackBuild  php73-composer.info  slack-desc
php73-igbinary/: README  php73-igbinary.SlackBuild  php73-igbinary.info  slack-desc
php73-imagick/: README  php73-imagick.SlackBuild  php73-imagick.info  slack-desc
php73-memcached/: README  php73-memcached.SlackBuild  php73-memcached.info  slack-desc
php73-msgpack/: README  php73-msgpack.SlackBuild  php73-msgpack.info  slack-desc
php73-oauth/: php73-oauth.SlackBuild  php73-oauth.info  slack-desc
php73-redis/: README  php73-redis.SlackBuild  php73-redis.info  slack-desc
php73-xdebug/: README  php73-xdebug.SlackBuild  php73-xdebug.info  slack-desc
poppler-qt6/: README  poppler-qt6.SlackBuild  poppler-qt6.info
profanity/: profanity.SlackBuild  profanity.info
python3-pyqt5/: README  python3-pyqt5.SlackBuild  python3-pyqt5.info  slack-desc
qbittorrent/: README  qbittorrent.SlackBuild  qbittorrent.info
qdirstat/: README  qdirstat.SlackBuild  qdirstat.info
qemu-guest-agent/: README  doinst.sh  qemu-guest-agent.SlackBuild  qemu-guest-agent.info  slack-desc  slack-required
qemu-guest-agent/files/: qemu-ga  rc.qemu-ga
qnetstatview/: qnetstatview.SlackBuild
qt5ct/: README  qt5ct.SlackBuild  qt5ct.info
qtcurve/: README  qtcurve.SlackBuild  qtcurve.info
qtcurve/patches/: debug.patch
qtkeychain/: README  qtkeychain.SlackBuild  qtkeychain.info
qtpass/: README  qtpass.SlackBuild  qtpass.info
rawstudio/: rawstudio.SlackBuild  rawstudio.info
rawtherapee/: rawtherapee.SlackBuild  rawtherapee.info
scribus/: README  scribus.SlackBuild  scribus.info
signon-kwallet-extension/: README  signon-kwallet-extension.info
sirikali/: README  sirikali.SlackBuild  sirikali.info
smb4k/: README  smb4k.SlackBuild  smb4k.info
soundkonverter/: soundkonverter.SlackBuild  soundkonverter.info
sqlitebrowser/: sqlitebrowser.SlackBuild  sqlitebrowser.info
tellico/: README  tellico.SlackBuild  tellico.info
trojita/: trojita.SlackBuild  trojita.info
vimb/: README  vimb.SlackBuild  vimb.info
vimtips/: README  vimtips.SlackBuild  vimtips.info
webkitgtk/: README  webkitgtk.SlackBuild  webkitgtk.info
webkitgtk/patches/: icu651.patch
wine/: README  wine.SlackBuild  wine.info
wireshark/: README  wireshark.SlackBuild  wireshark.info
yakuake/: yakuake.SlackBuild  yakuake.info
zulucrypt/: README  zulucrypt.SlackBuild  zulucrypt.info
